--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         background-color: black;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-size: 466px 403px;
+        background-position: 50% 50%;
+        background-size: cover;
         color: black;
         text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
         font: 'Berkshire Swash', Helvetica, sans-serif;
